fix(codepens): set overflow-y for sidebar

--- a/notes/codepens.css
+++ b/notes/codepens.css
@@ -5,6 +5,7 @@ body {
 
 nav {
   font-size: 14px;
+  overflow-y: auto;
 }
 
 ul > li {
